[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/alagard.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/Pixellari.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 782.0
margin_bottom = 449.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 225.0
margin_top = 121.0
margin_right = 547.0
margin_bottom = 178.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.47451, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"

[node name="GOTryAgainBtn" type="Button" parent="."]
margin_left = 313.0
margin_top = 210.0
margin_right = 455.0
margin_bottom = 242.0
custom_colors/font_color_hover = Color( 0.345098, 0.780392, 0.298039, 1 )
custom_fonts/font = SubResource( 2 )
text = "TRY AGAIN"
flat = true

[node name="GOMenuBtn" type="Button" parent="."]
margin_left = 314.0
margin_top = 248.0
margin_right = 456.0
margin_bottom = 280.0
custom_colors/font_color_hover = Color( 0.298039, 0.741176, 0.780392, 1 )
custom_fonts/font = SubResource( 2 )
text = "Main Menu"
flat = true

[node name="GOExitBtn" type="Button" parent="."]
margin_left = 314.0
margin_top = 289.0
margin_right = 456.0
margin_bottom = 321.0
custom_colors/font_color_hover = Color( 0.780392, 0.298039, 0.298039, 1 )
custom_fonts/font = SubResource( 2 )
text = "Quit"
flat = true

[connection signal="pressed" from="GOTryAgainBtn" to="." method="_on_GOTryAgainBtn_pressed"]
[connection signal="pressed" from="GOMenuBtn" to="." method="_on_GOMenuBtn_pressed"]
[connection signal="pressed" from="GOExitBtn" to="." method="_on_GOExitBtn_pressed"]
